--- a/src/Component/BingoFolder/Bingo.css
+++ b/src/Component/BingoFolder/Bingo.css
@@ -1,18 +1,25 @@
-/* .bingo-container {
+
+.bingo {
+    text-align: center;
+  }
+  
+  .bingo-container {
+    display: flex;
+    justify-content: space-around;
+  }
+  
+  .bingo-grid {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 5px;
+  }
+  
+  .bingo-cell {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 20px;
-  }
-  
-  .grid-container {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 5px;
-  }
-  
-  .grid-item {
+    width: 50px;
+    height: 50px;
     border: 1px solid black;
-    padding: 10px;
-    text-align: center;
-  } */
+  }
+.player_input{height: 5vh;width: 5%;padding-left: .5rem;}
